--- a/frontend/src/css/navbar.css
+++ b/frontend/src/css/navbar.css
@@ -23,10 +23,16 @@
   gap: 10px;
 }
 
-.logo {
-  align-content: center;
-  height: 5rem;
-  width: auto;
+/* .logo1 {
+  align-content:center;
+  height: 0%;
+  width: 0%;
+} */
+
+.logo2 {
+  align-content:center;
+  width: 150px;
+  height: auto;
 }
 
 .brand-name {
@@ -43,7 +49,7 @@
 .navbar-center {
   display: flex;
   align-items: center;
-  position: relative;
+  position:relative;
   width: 40%;
   max-width: 600px;
   margin-top: 10px; /* Shifts the search bar downward */
@@ -56,7 +62,7 @@
   border: 1px solid #e0e0e0;
   font-size: 14px;
   outline: none;
-  background-color: white; /* Ensures the search bar is white */
+  background-color: white; /* Ensures the search bar is white */;
 }
 
 .search-btn {
