--- a/frontend/src/css/Chat.css
+++ b/frontend/src/css/Chat.css
@@ -175,7 +175,7 @@
 }
 
 .unread-badge {
-  background-color: #007bff;
+  background-color: #C6553B;
   color: white;
   border-radius: 50%;
   padding: 2px 6px;
@@ -375,7 +375,7 @@
 }
 
 .message.sent {
-  background-color: #007bff;
+  background-color: #e3b27c;
   color: white;
   border-radius: 15px 15px 0 15px;
 }
