--- a/frontend/src/css/AppointmentRequests.css
+++ b/frontend/src/css/AppointmentRequests.css
@@ -57,6 +57,24 @@
   overflow-x: hidden;
 }
 
+/* Scrollbar styling */
+/* .main-content::-webkit-scrollbar {
+  width: 5rem ;
+} */
+
+.main-content::-webkit-scrollbar-track {
+  background: #f5ead9;
+}
+
+.main-content::-webkit-scrollbar-thumb {
+  background-color: #e3b27c;
+  border-radius: 4px;
+}
+
+.main-content::-webkit-scrollbar-thumb:hover {
+  background-color: #d4a76a;
+}
+
 .header h1 {
   font-size: 1.5rem;
   margin-bottom: 10px;
